change env, fix css, add scrollbar style

--- a/src/components/ItemsTable/ItemsTable.scss
+++ b/src/components/ItemsTable/ItemsTable.scss
@@ -117,7 +117,6 @@
 .page-size-setter {
   font-size: 10px;
   color: rgb(96, 122, 182);
-  margin-bottom: 15rem;
 
   select {
     background-color: rgba(43, 51, 110, 0.6);
